overflow slidr fix
overflow slider fix

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -859,7 +859,7 @@ h1 {
 
 .slider {
   height: 320px;
-  width: 300px;
+  width: 280px;
   margin: 25px auto 0;
   overflow: visible;
   position: relative;
